# DB

./: CMakeLists.txt  InterfaceDB.cpp  InterfaceDB.h  README.md  conanfile.txt  data.sqlite  dbmanager.cpp  dbmanager.h  main.cpp
